Fixed fire stuck

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -150,6 +150,7 @@ a:hover {
 /*THIS IS GOING TO BE THE ANIMATION */
 
 .fire {
+  opacity: 0%;
   position: relative;
   animation-name: movement;
   animation-duration: 3s;
@@ -186,13 +187,12 @@ a:hover {
   0%{
 
     bottom: 0;
-    opacity: 0;
-    /*right: 50px;*/
-  }
-  20%{
     opacity: 100%;
   }
-  /*40%{
+  /*20%{
+    right: 40px;
+  }
+  40%{
     right: 60px;
   }
 
@@ -207,10 +207,10 @@ a:hover {
   }
   80%{
     right: 25px;
-  }
-  90%{
-    right: 50px;
   }*/
+  99%{
+    opacity: 100%;
+  }
   100%{
     bottom: 2000px;
     -webkit-opacity: 0;
